2026-01-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: (LT): Define `@cover` string as `\\$0`, not "LT"
	literally.  Conceivably, a document could rename or alias the
	`LT` macro; in a diagnostic prompted by an invalid attempt to
	combine multiple cover page schemes, we want to report the name
	that had actual effect.

	Fixes <https://savannah.gnu.org/bugs/?67889>.  Thanks to Alexis
	Hildebrandt for the report.

2026-01-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: (PGFORM, pg@enable-trap): Invoke page location trap
	dumping request under its new name, `pwh`, not `ptr`.

2026-01-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	Regression-test (the defect reported in) Savannah #67830.  The
	package's `Captc` string was not getting translated.

	* tests/Captc-translates.sh: Do it.
	* mm.am (mm_TESTS): Run test.

2026-01-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (SP, SA, TAB, MOVE, SM, HC, VERBOFF, PIC, EPIC, HM)
	(PGNH, BS, BE, VM, 1C, 2C, MC, NCOL, SK, MULB, MULN, MULE, OP)
	(FD, DE, DF, DS, TS, TH, TE, T&, PS, PY, EQ, EN, TC, FG, TB, EC)
	(EX, B, I, R, IB, BI, IR, RI, RB, BR, B1, B2, RF, APP, APPSK)
	(AU, AST, ISODATE, MT, COVER, GETST, GETHN, GETPN, GETR, IND)
	(INDP, FC, AV, AVL, IE, WE): Enable diagnostic argument dumping
	at appropriately high debugging levels (`-rD5` or greater).

2026-01-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (H): Throw error diagnostic if not given mandatory
	argument, or the first argument ("level") is not an arithmetic
	expression.

2025-12-23  Alexis Hildebrandt <afh@surryhill.net>

	[mm]: Fix Savannah #67857.

	Reading through mse.tmac and LT.se as a preparation to take on
	bug #65861 I noticed that the layout does not seem right (see
	attachment LT.se-before.pdf).  The main issues I notice are as
	follows.
	-  The main body text is offset very far to the right and
	   overflows the right paper edge.