@@ -94,6 +94,7 @@ mm_TESTS = \
   contrib/mm/tests/place-equation-labels-correctly-in-displays.sh \
   contrib/mm/tests/remove-stale-bib-entry-data.sh \
   contrib/mm/tests/short-pages-do-not-overflow-stack.sh \
+  contrib/mm/tests/toc-captions-ident-correctly.sh \
   contrib/mm/tests/vertical-margins-are-correct.sh
 TESTS += $(mm_TESTS)
 EXTRA_DIST += \
